@@ -1,5 +1,6 @@
 4.5.0 (xxxx-xx-xx)
 ---------------------------
+* added ArangoDatabase.create()
 * added ArangoCollection.create() && .create(CollectionCreateOptions)
 * extracted interfaces for ArangoDB API
 * fixed aquireHostList bug when using active failover
